--- a/LaneLine-and-Sign-Detection/mainwindow.ui
+++ b/LaneLine-and-Sign-Detection/mainwindow.ui
@@ -187,7 +187,7 @@
      <string>高斯核</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="label_sign_1">
     <property name="geometry">
      <rect>
       <x>370</x>
@@ -200,7 +200,7 @@
      <string>路牌1</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label_sign_2">
     <property name="geometry">
      <rect>
       <x>540</x>
