--- a/LaneLine-and-Sign-Detection/mainwindow.ui
+++ b/LaneLine-and-Sign-Detection/mainwindow.ui
@@ -27,24 +27,24 @@
      <string>点击打开-选择视频</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_start">
+   <widget class="QPushButton" name="pushButton_start_line">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>140</y>
+      <y>90</y>
       <width>111</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>开始</string>
+     <string>车道线检测</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_open">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>70</y>
+      <y>30</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>280</y>
+      <y>270</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -79,134 +79,39 @@
      <string>结束</string>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>400</y>
-      <width>121</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QSlider" name="horizontalSlider_2">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>440</y>
-      <width>121</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QSlider" name="horizontalSlider_3">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>480</y>
-      <width>121</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>400</y>
-      <width>52</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>400</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>高斯核</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_2">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>440</y>
-      <width>52</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_2">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>440</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>高斯核</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_3">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>480</y>
-      <width>52</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_3">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>480</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>高斯核</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_sign_1">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>380</y>
-      <width>151</width>
-      <height>111</height>
+      <x>120</x>
+      <y>370</y>
+      <width>211</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="text">
      <string>路牌1</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_start_sign">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>150</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>路牌检测</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_sign_2">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>380</y>
-      <width>151</width>
-      <height>111</height>
+      <x>420</x>
+      <y>370</y>
+      <width>211</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="text">
